--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,8 +15,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; 'current; Animating customized avatar; Mediapipe holistic pipeline; Monocular video; Part based; Pose beautification; Potential customers; Real-time animations; Sparse unified part-based human representation; Virtual try-on; Pipelines},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavo2019125463,
@@ -33,8 +32,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Blending; User interfaces; Virtual reality; 3D graphics; Accuracy and precision; Blender; Character animation; Computer animation; evaluation; Immersive virtual reality; Task completion time; Animation},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 40; All Open Access, Gold Open Access, Green Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Gatteschi202253,
@@ -52,8 +50,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Accidents; Digital storage; Feature extraction; Learning systems; Roads and streets; Time series analysis; Vehicles; Anomaly detection; Black boxes; Driving behaviour; Features extraction; Performances evaluation; Sensor phenomenon and characterizations; Smart phones; Threshold; Time-series analysis; Smartphones},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 13}
+	source = {Scopus}
 }
 
 @CONFERENCE{Prattico2019205,
@@ -70,8 +67,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Machine design; Man machine systems; Mixed reality; Robotics; User interfaces; Game design; Human machine interaction; Mixed reality technologies; Phygital play; Tangible interfaces; Tangible user interfaces; User experience; User interaction; Human robot interaction},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 4}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò2020113,
@@ -87,8 +83,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Computer games; Computer vision; Textures; Virtual reality; 3-D virtual environment; Augmented reality applications; Automatic Generation; Computer-based system; Immersive virtual environments; Steep learning curve; Traditional techniques; Virtual reality simulations; Three dimensional computer graphics},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 8}
+	source = {Scopus}
 }
 
 @ARTICLE{Calandra20213147,
@@ -106,11 +101,12 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Academic work; Commercial products; New approaches; Remote assistance; Remote experts; User study; Air navigation},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 18; All Open Access, Hybrid Gold Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Lamberti20181742,
+	abbr={TVCG},
+	google_scholar_id={2osOgNQ5qMEC},
 	author = {Lamberti, Fabrizio and Paravati, Gianluca and Gatteschi, Valentina and Cannavo, Alberto and Montuschi, Paolo},
 	title = {Virtual Character Animation Based on Affordable Motion Capture and Reconfigurable Tangible Interfaces},
 	year = {2018},
@@ -125,8 +121,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Blending; Human computer interaction; Open source software; Open systems; User interfaces; Virtual reality; Computer animation; Human machine interaction; Motion capture; Natural user interfaces; Tangible user interfaces; Animation},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 32; All Open Access, Green Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{De Lorenzis202379,
@@ -143,8 +138,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Digital libraries; Virtual reality; Continuous integrations; Cultural institutions; Cutting edge technology; Digital evolution; Digital transformation; Immersive environment; Key Actors; Metaverses; Social platform; Work study; Recommender systems},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò202277,
@@ -161,8 +155,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; Image enhancement; Natural language processing systems; 3D animation; Automatic Generation; Computer animation; Graphic contents; Image-analysis; Instructional materials; Interactive graphics; Language processing; Natural language processing; Natural languages; Image analysis},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @CONFERENCE{Pratticò201976,
@@ -178,8 +171,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Commercial off-the-shelf; Human robot interaction; Machine design; Robotics; Design process; Floor projections; Game design; Mixed reality technologies; phygital play; User experience; User perceptions; Mixed reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 4}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò202394,
@@ -194,8 +186,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Application programs; Computer aided software engineering; Engineering education; Image reconstruction; Mixed reality; 3D reconstruction; Applications domains; Autonomous Vehicles; Hardware and software; Hardware tools; Immersive; Mixed reality technologies; Spectra's; Technological advancement; Video-games; Augmented reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò20241003,
@@ -213,8 +204,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {E-learning; Electronic commerce; Parameter estimation; Product design; Textile industry; Textiles; Virtual reality; 3D geometry; Computational costs; Crocheting instruction generation algorithm; Digital crafting; Generation algorithm; Instruction generations; Object shape; Parametric design; Parametric surfaces; Short row; Virtual prototyping},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò20243234,
@@ -232,8 +222,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Drawing (graphics); Linear transformations; Three dimensional computer graphics; Virtual reality; 3D computer graphics; Blendshapes; Direct manipulation; Facial animation; High quality; Immersive virtual reality; Mesh vertex; Sketch based Interface; Time-consuming tasks; Traditional animations; Animation},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavo2024,
@@ -247,8 +236,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {3D modeling; 3D reconstruction; Animation; Fits and tolerances; Garment industry; Hosiery manufacture; Pipe fittings; Body shapes; Cloth simulation; Customer experience; Digital garments; Digitisation; High-fidelity; Motion capture; Real- time; State-of-the-art techniques; Technological advancement; Sales},
 	type = {Article},
 	publication_stage = {Article in press},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò201826,
@@ -264,8 +252,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {E-learning; Sports; Wearable technology; Experimental test; Human machine interaction; Immersive virtual reality; Movement analysis; Spatial positioning; Technological advancement; Training Systems; Video projections; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 30}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavo2023318,
@@ -281,8 +268,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Arts computing; Computer vision; Helmet mounted displays; Human computer interaction; Virtual reality; Acting rehearsal and performance; Applied computing; Body ownership; Collaborative interaction; Collaborative virtual production; Computing methodologies; Computing methodology - computer vision -; Human-centered computing; Human-centered computing - applied computing-art and humanity - medium art; Human-centered computing - applied computing-art and humanity - performing art; Human-centered computing - human computer interaction  - collaborative interaction -; Human-centered computing - human computer interaction  - mixed / augmented reality -; Image and video acquisition - motion capture; Media arts; Motion capture; Performance; Performing arts; Video acquisitions; Virtual character; Virtual production; Visual effects; Augmented reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 4}
+	source = {Scopus}
 }
 
 @CONFERENCE{Hogue2023,
@@ -294,8 +280,7 @@ EXPORT DATE: 02 April 2025
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85184819448&doi=10.1109%2fGEM59776.2023.10389949&partnerID=40&md5=271539993d1b724e9cac8f521a753545},
 	type = {Editorial},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0; All Open Access, Bronze Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Botto2020299,
@@ -311,8 +296,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Manufacture; Virtual reality; Completion time; Error rate; Manual assembly; Manufacturing industries; Tool supporting; User study; User interfaces},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 21}
+	source = {Scopus}
 }
 
 @ARTICLE{Prattico202376,
@@ -329,8 +313,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Electromechanical devices; Haptic interfaces; Mockups; Screws; Audio feedbacks; Haptic devices; Haptics; Haptics interfaces; Performances evaluation; Shape; Task analysis; Tracking; Virtual reality experiences; Visual feedback; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+	source = {Scopus}
 }
 
 @ARTICLE{Cancedda2017447,
@@ -347,8 +330,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Efficiency; Feedback; Man machine systems; Mixed reality; Multi agent systems; Remote control; Robotics; User interfaces; Visual communication; Visual servoing; 3D user interface; Amount of information; Human robot Interaction (HRI); Interaction efficiency; Natural interactions; Robot teleoperation; Teleoperation systems; Visual feedback; Human robot interaction},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 9}
+	source = {Scopus}
 }
 
 @ARTICLE{Calandra2024315,
@@ -366,8 +348,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Collaborative robots; Industrial manipulators; Industry 4.0; Virtual reality; Visual communication; 6g; Collaborative robots; Human-centric; New applications; Paradigm shifts; Point cloud streaming; Point-clouds; Production process; Technological advancement; Telepresence; Robot programming},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 8; All Open Access, Gold Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Lamberti2019,
@@ -381,8 +362,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Machine design; Robotics; Design spaces; Interactive games; Interactive robotics; Mixed reality technologies; Physical elements; Software platforms; Mixed reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 5}
+	source = {Scopus}
 }
 
 @CONFERENCE{Ferri2022916,
@@ -397,8 +377,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {'current; Immersive application; Immersive virtual environments; Object interactions; Selection techniques; Virtual heritage; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @ARTICLE{Lamberti2023237,
@@ -413,8 +392,7 @@ EXPORT DATE: 02 April 2025
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85168728725&doi=10.1109%2fTCE.2023.3292165&partnerID=40&md5=78ed3af8f4499be517572916cc61cfd2},
 	type = {Editorial},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1; All Open Access, Bronze Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Jiang2021,
@@ -429,8 +407,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {3D sketching; Air drawing; Hand tracking; Pen interactions; Sketching tools; Two-handed interaction; User study; Virtual objects; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 32}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò2024,
@@ -447,8 +424,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {3D printing; Three dimensional computer graphics; User interfaces; Additional key word and phrasesvirtual museum; Ancient Egypt; Cultural heritages; High-fidelity; Key words; Speech user interfaces; Tangible interfaces; Tangible user interfaces; Virtual humans; Virtual reality experiences; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0; All Open Access, Hybrid Gold Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Lamberti20181017,
@@ -464,8 +440,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Balancing; Machine design; Mobile robots; Patient rehabilitation; Robotics; Ubiquitous computing; assessment; Exergames; Gamification; Spatial orientations; vestibular disorders; Mobile telecommunication systems},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1}
+	source = {Scopus}
 }
 
 @CONFERENCE{Calandra2021380,
@@ -482,8 +457,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Industrial manipulators; Manipulators; Robotics; Virtual reality; Industrial tasks; Remote assistance; Robotic applications; Robotic manipulators; Air navigation},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+	source = {Scopus}
 }
 
 @ARTICLE{Pratticò2021,
@@ -499,8 +473,7 @@ EXPORT DATE: 02 April 2025
 	author_keywords = {Dramaturgy prototyping; Experiential courses; First Responders; Mock-up tool; Training design; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 7; All Open Access, Gold Open Access, Green Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Prattico20211157,
@@ -518,8 +491,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Display devices; Interface states; Light emitting diodes; Pedestrian safety; Road vehicles; Roads and streets; Virtual reality; Cognitive efforts; Evaluation metrics; Fully-autonomous vehicles; Immersive virtual reality; Information sources; Reality interface; Road infrastructures; Urban environments; Autonomous vehicles},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 44; All Open Access, Green Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò2024,
@@ -535,8 +507,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Head-up displays; Helmet mounted displays; Layered manufacturing; Mixed reality; Acting rehearsal and performance; Collaborative virtual production; Digital characters; Digital contents; Mixed reality; Motion capture; Performance; Virtual production; Visual effects; Wall motion; Motion capture},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1; All Open Access, Hybrid Gold Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò2017266,
@@ -552,8 +523,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Interfaces (computer); Mobile devices; 3D object manipulations; 3D user interface; Coarse grains; Fine-grained control; Hand held device; Interaction techniques; Tangible interfaces; Virtual objects; User interfaces},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 3}
+	source = {Scopus}
 }
 
 @CONFERENCE{Bologna2023941,
@@ -568,8 +538,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Authentication; 3D interactions; 3D object; Authentication scheme; Authentication techniques; Immersive virtual reality; Multiple patterns; Pattern factors; Security and usabilities; Shoulder surfing; User study; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò201845,
@@ -584,8 +553,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; Arts computing; User interfaces; Based animations; Character animation; Computer animation; Immersive virtual reality; Observation point; Spatial awareness; Tangible user interfaces; Virtual character; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 8}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavo20223397,
@@ -600,8 +568,7 @@ EXPORT DATE: 02 April 2025
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85132515937&doi=10.1109%2fTVT.2022.3160625&partnerID=40&md5=373df908bfacc12bd3de859f4d1d84fb},
 	type = {Editorial},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 7; All Open Access, Bronze Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò202051,
@@ -618,8 +585,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; Arts computing; 3D characters; Computer animation; Fully integrated; Immersive environment; Interaction paradigm; Labor intensive; Sketch based Interface; Virtual character; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 6}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò2019310,
@@ -636,8 +602,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; Computer vision; Learning systems; Machine learning; Sports; Virtual reality; Automatic recognition; Event recognition; Immersive VR; Spatio temporal; Spatio-temporal data; Sport events; Tool supporting; Virtual player; E-learning},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 4; All Open Access, Hybrid Gold Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavo20216,
@@ -654,8 +619,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Augmented reality; Virtual reality; Breakthrough technology; Financial service; Traditional services; Blockchain},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 40}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò2020,
@@ -671,8 +635,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Computer circuits; Exhibitions; Interactive devices; Three dimensional computer graphics; User experience; 3D interactive graphics; Computer skill; End user development(EUD); Interactive applications; Interactive contents; Objective and subjective measurements; Programming skills; Visual programming languages; Visual languages},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 11}
+	source = {Scopus}
 }
 
 @ARTICLE{Lamberti20191655,
@@ -689,8 +652,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; Character recognition; Product design; Automatic technique; Information sharing; Multi-modal interfaces; Multimodal animations; Natural interfaces; Performance based approach; Performance based method; Production process; Natural language processing systems},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 8}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò20211871,
@@ -708,8 +670,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Testbeds; Application scenario; Common operations; Comprehensive analysis; Design spaces; Experimental protocols; Objective and subjective measures; Scoring systems; Weighted set; article; human; human experiment; locomotion; outcome assessment; scoring system; virtual reality; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 33; All Open Access, Green Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Attanasio2017256,
@@ -725,8 +686,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Arts computing; Augmented reality; Degrees of freedom (mechanics); Mobile devices; 3D user interface; Constructive Art; Customized Tags; Field of views; Hand held device; Six degrees of freedom; Spatial dimension; Virtual tool; User interfaces},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @ARTICLE{Calandra2023985,
@@ -744,8 +704,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {E-learning; Fire extinguishers; Fires; Forestry; Haptic interfaces; Teaching; Fire simulation; First responders; Forest firefighting; Haptics; Haptics interfaces; Passive haptic; Procedural learning; Training simulation; Video-based training; Virtual reality training; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 16; All Open Access, Hybrid Gold Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò2021291,
@@ -762,8 +721,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {3D sketching; Consumer interaction; Ease-of-use; Immersive virtual reality; Input devices; Motion capture system; Tracking technology; User study; Virtual reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 10}
+	source = {Scopus}
 }
 
 @CONFERENCE{Calandra20191403,
@@ -779,8 +737,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Brick; Computer hardware; Human computer interaction; Mice (computer peripherals); Mixed reality; Virtual reality; Centered computing; Communication hardware; Haptic devices; Human; Human computer interaction (HCI); Interaction paradigm; Haptic interfaces},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 5; All Open Access, Bronze Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Lamberti20171989,
@@ -798,8 +755,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Data visualization; Product design; User interfaces; Visualization; Websites; Heat maps; Interaction pattern; user's attention; Web analytics; Web navigation; Big data},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 19; All Open Access, Green Open Access}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò20241811,
@@ -817,8 +773,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Motion pictures; 360°; Cinematic VR; Cinematics; External perspective; First-person perspectives; Immersive; Immersive video; Live actions; Omnidirectional; User study; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 3; All Open Access, Hybrid Gold Open Access}
+	source = {Scopus}
 }
 
 @CONFERENCE{Cannavò201753,
@@ -833,8 +788,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Feedback; Helmet mounted displays; Human robot interaction; Interface states; User interfaces; Application scenario; Body gesture; Hand gesture; Humans-robot interactions; Interaction paradigm; Intuitive interaction; Research topics; Robot teams; Tele-operations; User interaction; Augmented reality},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò2021109,
@@ -851,8 +805,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {3D modeling; Three dimensional computer graphics; 2D images; 3D scenes; Automatic tools; Fast prototyping; Ideal solutions; Image-based models; Object modeling; Scene generation; Scene object; Scene-object modeling; Machine learning},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
+	source = {Scopus}
 }
 
 @CONFERENCE{Bonaiuto2017555,
@@ -868,8 +821,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Application programs; Computer software; Human robot interaction; Mobile devices; Palmprint recognition; Robots; Hand tracking; Robot teams; Robot technology; Subtasks; User study; User interfaces},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 11}
+	source = {Scopus}
 }
 
 @ARTICLE{Cannavò20241763,
@@ -886,8 +838,7 @@ EXPORT DATE: 02 April 2025
 	author_keywords = {laboratory activities; learning experience; learning performance; technology-aided education; virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1}
+	source = {Scopus}
 }
 
 @CONFERENCE{De Lorenzis2023,
@@ -902,8 +853,7 @@ EXPORT DATE: 02 April 2025
 	keywords = {Cryptography; Sensitive data; User interfaces; Virtual reality; 3D user interface; Asymmetric cryptography; Distributed authentication; Immersive virtual reality; Intrinsic characteristics; Metaverses; Private key; Sensitive datas; Virtual reality experiences; Virtual-reality environment; Authentication},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+	source = {Scopus}
 }
 
 @ARTICLE{Lamberti202036,
@@ -920,6 +870,5 @@ EXPORT DATE: 02 April 2025
 	keywords = {Animation; Blending; Based animations; Computer animation; Immersive virtual reality; Immersive VR; Labor intensive; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 20}
+	source = {Scopus}
 }
