--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,23 @@
-Scopus
-EXPORT DATE: 02 April 2025
+---
+---
+
+@ARTICLE{Cannavò20211871,
+	author = {Cannavò, Alberto and Calandra, Davide and Pratticò, F. Gabriele and Gatteschi, Valentina and Lamberti, Fabrizio},
+	title = {An Evaluation Testbed for Locomotion in Virtual Reality},
+	year = {2021},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	volume = {27},
+	number = {3},
+	pages = {1871 – 1889},
+	doi = {10.1109/TVCG.2020.3032440},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85100383262&doi=10.1109%2fTVCG.2020.3032440&partnerID=40&md5=815bc3e8c0bed98df32e385fca283398},
+	abstract = {A common operation performed in Virtual Reality (VR) environments is locomotion. Although real walking can represent a natural and intuitive way to manage displacements in such environments, its use is generally limited by the size of the area tracked by the VR system (typically, the size of a room) or requires expensive technologies to cover particularly extended settings. A number of approaches have been proposed to enable effective explorations in VR, each characterized by different hardware requirements and costs, and capable to provide different levels of usability and performance. However, the lack of a well-defined methodology for assessing and comparing available approaches makes it difficult to identify, among the various alternatives, the best solutions for selected application domains. To deal with this issue, this article introduces a novel evaluation testbed which, by building on the outcomes of many separate works reported in the literature, aims to support a comprehensive analysis of the considered design space. An experimental protocol for collecting objective and subjective measures is proposed, together with a scoring system able to rank locomotion approaches based on a weighted set of requirements. Testbed usage is illustrated in a use case requesting to select the technique to adopt in a given application scenario. © 2020 IEEE.},
+	author_keywords = {evaluation; locomotion; performance; requirements; testbed; user experience; virtual environments; Virtual reality},
+	keywords = {Testbeds; Application scenario; Common operations; Comprehensive analysis; Design spaces; Experimental protocols; Objective and subjective measures; Scoring systems; Weighted set; article; human; human experiment; locomotion; outcome assessment; scoring system; virtual reality; Virtual reality},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus}
+}
 
 @ARTICLE{Cannavò202369,
 	author = {Cannavò, Alberto and Pesando, Roberto and Lamberti, Fabrizio},
@@ -106,22 +124,24 @@ EXPORT DATE: 02 April 2025
 
 @ARTICLE{Lamberti20181742,
 	abbr={TVCG},
-	google_scholar_id={2osOgNQ5qMEC},
-	author = {Lamberti, Fabrizio and Paravati, Gianluca and Gatteschi, Valentina and Cannavo, Alberto and Montuschi, Paolo},
 	title = {Virtual Character Animation Based on Affordable Motion Capture and Reconfigurable Tangible Interfaces},
-	year = {2018},
+	author = {Lamberti, Fabrizio and Paravati, Gianluca and Gatteschi, Valentina and Cannavo, Alberto and Montuschi, Paolo},
+	abstract = {Software for computer animation is generally characterized by a steep learning curve, due to the entanglement of both sophisticated techniques and interaction methods required to control 3D geometries. This paper proposes a tool designed to support computer animation production processes by leveraging the affordances offered by articulated tangible user interfaces and motion capture retargeting solutions. To this aim, orientations of an instrumented prop are recorded together with animator's motion in the 3D space and used to quickly pose characters in the virtual environment. High-level functionalities of the animation software are made accessible via a speech interface, thus letting the user control the animation pipeline via voice commands while focusing on his or her hands and body motion. The proposed solution exploits both off-the-shelf hardware components (like the Lego Mindstorms EV3 bricks and the Microsoft Kinect, used for building the tangible device and tracking animator's skeleton) and free open-source software (like the Blender animation tool), thus representing an interesting solution also for beginners approaching the world of digital animation for the first time. Experimental results in different usage scenarios show the benefits offered by the designed interaction strategy with respect to a mouse & keyboard-based interface both for expert and non-expert users. © 1995-2012 IEEE.},
 	journal = {IEEE Transactions on Visualization and Computer Graphics},
 	volume = {24},
 	number = {5},
 	pages = {1742 – 1755},
+	year = {2018},
 	doi = {10.1109/TVCG.2017.2690433},
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85045017032&doi=10.1109%2fTVCG.2017.2690433&partnerID=40&md5=12b0709ef70141b68ff3efd2548b3eee},
-	abstract = {Software for computer animation is generally characterized by a steep learning curve, due to the entanglement of both sophisticated techniques and interaction methods required to control 3D geometries. This paper proposes a tool designed to support computer animation production processes by leveraging the affordances offered by articulated tangible user interfaces and motion capture retargeting solutions. To this aim, orientations of an instrumented prop are recorded together with animator's motion in the 3D space and used to quickly pose characters in the virtual environment. High-level functionalities of the animation software are made accessible via a speech interface, thus letting the user control the animation pipeline via voice commands while focusing on his or her hands and body motion. The proposed solution exploits both off-the-shelf hardware components (like the Lego Mindstorms EV3 bricks and the Microsoft Kinect, used for building the tangible device and tracking animator's skeleton) and free open-source software (like the Blender animation tool), thus representing an interesting solution also for beginners approaching the world of digital animation for the first time. Experimental results in different usage scenarios show the benefits offered by the designed interaction strategy with respect to a mouse & keyboard-based interface both for expert and non-expert users. © 1995-2012 IEEE.},
+	google_scholar_id={2osOgNQ5qMEC},
 	author_keywords = {computer animation; human-machine interaction; motion capture; natural user interfaces; Tangible user interfaces},
 	keywords = {Blending; Human computer interaction; Open source software; Open systems; User interfaces; Virtual reality; Computer animation; Human machine interaction; Motion capture; Natural user interfaces; Tangible user interfaces; Animation},
 	type = {Article},
 	publication_stage = {Final},
-	source = {Scopus}
+	source = {Scopus},
+	selected = {true}
+
 }
 
 @ARTICLE{De Lorenzis202379,
@@ -650,24 +670,6 @@ EXPORT DATE: 02 April 2025
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85059750274&doi=10.1080%2f10447318.2018.1561068&partnerID=40&md5=5beb8a70a314e10f4e39b193ecc71b90},
 	abstract = {Virtual character animation is receiving an ever-growing attention by researchers, who proposed already many tools with the aim to improve the effectiveness of the production process. In particular, significant efforts are devoted to create animation systems suited also to non-skilled users, in order to let them benefit from a powerful communication instrument that can improve information sharing in many contexts like product design, education, marketing, etc. Apart from methods based on the traditional Windows-Icons-Menus-Pointer (WIMP) paradigms, solutions devised so far leverage approaches based on motion capture/retargeting (the so-called performance-based approaches), on non-conventional interfaces (voice inputs, sketches, tangible props, etc.), or on natural language processing (NLP) over text descriptions (e.g., to automatically trigger actions from a library). Each approach has its drawbacks, though. Performance-based methods are difficult to use for creating non-ordinary movements (flips, handstands, etc.); natural interfaces are often used for rough posing, but results need to be later refined; automatic techniques still produce poorly realistic animations. To deal with the above limitations, we propose a multimodal animation system that combines performance- and NLP-based methods. The system recognizes natural commands (gestures, voice inputs) issued by the performer, extracts scene data from a text description and creates live animations in which pre-recorded character actions can be blended with performer’s motion to increase naturalness. © 2018, © 2018 Taylor & Francis Group, LLC.},
 	keywords = {Animation; Character recognition; Product design; Automatic technique; Information sharing; Multi-modal interfaces; Multimodal animations; Natural interfaces; Performance based approach; Performance based method; Production process; Natural language processing systems},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus}
-}
-
-@ARTICLE{Cannavò20211871,
-	author = {Cannavò, Alberto and Calandra, Davide and Pratticò, F. Gabriele and Gatteschi, Valentina and Lamberti, Fabrizio},
-	title = {An Evaluation Testbed for Locomotion in Virtual Reality},
-	year = {2021},
-	journal = {IEEE Transactions on Visualization and Computer Graphics},
-	volume = {27},
-	number = {3},
-	pages = {1871 – 1889},
-	doi = {10.1109/TVCG.2020.3032440},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85100383262&doi=10.1109%2fTVCG.2020.3032440&partnerID=40&md5=815bc3e8c0bed98df32e385fca283398},
-	abstract = {A common operation performed in Virtual Reality (VR) environments is locomotion. Although real walking can represent a natural and intuitive way to manage displacements in such environments, its use is generally limited by the size of the area tracked by the VR system (typically, the size of a room) or requires expensive technologies to cover particularly extended settings. A number of approaches have been proposed to enable effective explorations in VR, each characterized by different hardware requirements and costs, and capable to provide different levels of usability and performance. However, the lack of a well-defined methodology for assessing and comparing available approaches makes it difficult to identify, among the various alternatives, the best solutions for selected application domains. To deal with this issue, this article introduces a novel evaluation testbed which, by building on the outcomes of many separate works reported in the literature, aims to support a comprehensive analysis of the considered design space. An experimental protocol for collecting objective and subjective measures is proposed, together with a scoring system able to rank locomotion approaches based on a weighted set of requirements. Testbed usage is illustrated in a use case requesting to select the technique to adopt in a given application scenario. © 2020 IEEE.},
-	author_keywords = {evaluation; locomotion; performance; requirements; testbed; user experience; virtual environments; Virtual reality},
-	keywords = {Testbeds; Application scenario; Common operations; Comprehensive analysis; Design spaces; Experimental protocols; Objective and subjective measures; Scoring systems; Weighted set; article; human; human experiment; locomotion; outcome assessment; scoring system; virtual reality; Virtual reality},
 	type = {Article},
 	publication_stage = {Final},
 	source = {Scopus}
