--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,3 +38,13 @@
   google_scholar_id={2osOgNQ5qMEC},
   selected={true}
 }
+
+@inproceedings{cannavo2023ar,
+  abbr={IEEE VR},
+  title={AR-MoCap: using augmented reality to support motion capture acting},
+  author={Cannav{\`o}, Alberto and Prattic{\`o}, Filippo Gabriele and Bruno, Alberto and Lamberti, Fabrizio},
+  booktitle={2023 IEEE Conference Virtual Reality and 3D User Interfaces (VR)},
+  pages={318--327},
+  year={2023},
+  organization={IEEE}
+}
