--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
 @article{lamberti2017virtual,
   abbr={TVCG},
   title={Virtual character animation based on affordable motion capture and reconfigurable tangible interfaces},
-  author={Lamberti, Fabrizio and Paravati, Gianluca and Gatteschi, Valentina and Cannavo, Alberto and Montuschi, Paolo},
+  author={Lamberti, Fabrizio and Paravati, Gianluca and Gatteschi, Valentina and Cannavò, Alberto and Montuschi, Paolo},
   journal={IEEE Transactions on Visualization and Computer Graphics},
   volume={24},
   number={5},
@@ -42,7 +42,7 @@
 @inproceedings{cannavo2023ar,
   abbr={IEEE VR},
   title={AR-MoCap: using augmented reality to support motion capture acting},
-  author={Cannav{\`o}, Alberto and Prattic{\`o}, Filippo Gabriele and Bruno, Alberto and Lamberti, Fabrizio},
+  author={Cannavò, Alberto and Pratticò, Filippo Gabriele and Bruno, Alberto and Lamberti, Fabrizio},
   booktitle={2023 IEEE Conference Virtual Reality and 3D User Interfaces (VR)},
   pages={318--327},
   year={2023},
