working on the bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,11 +40,11 @@
 }
 
 @inproceedings{cannavo2023ar,
-  abbr={IEEE VR},
+  abbr={AJP},
   title={AR-MoCap: using augmented reality to support motion capture acting},
   author={Cannavò, Alberto and Pratticò, Filippo Gabriele and Bruno, Alberto and Lamberti, Fabrizio},
   booktitle={2023 IEEE Conference Virtual Reality and 3D User Interfaces (VR)},
   pages={318--327},
   year={2023},
-  organization={IEEE}
+  google_scholar_id={e5wmG9Sq2KIC}
 }
